--- a/.github/workflows/webui.yml
+++ b/.github/workflows/webui.yml
@@ -15,10 +15,11 @@ jobs:
     steps:
     - uses: actions/checkout@v5
     - name: Use Node.js
-      uses: actions/setup-node@v5
+      uses: actions/setup-node@v6
       with:
         node-version: 'latest'
+        package-manager: 'pnpm'
     - name: build
       run: |
-        npm install
-        npm run build
+        pnpm install
+        pnpm run build
