--- a/.github/workflows/webui.yml
+++ b/.github/workflows/webui.yml
@@ -18,8 +18,8 @@ jobs:
       uses: actions/setup-node@v6
       with:
         node-version: 'latest'
-        package-manager: 'pnpm'
+        package-manager: 'npm'
     - name: build
       run: |
-        pnpm install
-        pnpm run build
+        npm install
+        npm run build
